<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.hw2again.BoardView
            android:id="@+id/boardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_15_squares_puzzle" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:columnCount="4"
            app:rowCount="4">

            <Button
                android:id="@+id/b00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1" />

            <Button
                android:id="@+id/b01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2" />

            <Button
                android:id="@+id/b02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3" />

            <Button
                android:id="@+id/b03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4" />

            <Button
                android:id="@+id/b10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5" />

            <Button
                android:id="@+id/b11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6" />

            <Button
                android:id="@+id/b12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7" />

            <Button
                android:id="@+id/b13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8" />

            <Button
                android:id="@+id/b20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9" />

            <Button
                android:id="@+id/b21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10" />

            <Button
                android:id="@+id/b22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11" />

            <Button
                android:id="@+id/b23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12" />

            <Button
                android:id="@+id/b30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_13" />

            <Button
                android:id="@+id/b31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14" />

            <Button
                android:id="@+id/b32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15" />

            <Button
                android:id="@+id/b33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />
        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>